fix: 新增升级维护说明

--- a/升级维护说明.md
+++ b/升级维护说明.md
@@ -2,6 +2,12 @@
 
 ## 升级注意事项
 
+### 准备工作
+
+- 升级所有节点,保证 centos 系统版本对齐
+- 升级内核,新老节点对齐
+- 升级 ansible, 旧版 ansible 莫名报语法错误
+
 ### /etc/hosts 修改
 
 新增节点一定要修改/etc/hosts,添加主机名解析!!!(否则 kubelet 会认证失败)
